Fix crash when opening RealmsMainScreen